@@ -12,12 +12,23 @@ LOCK TABLE tstsrc SHARED;
 LOCK TABLE tstsrcpart SHARED;
 LOCK TABLE tstsrcpart PARTITION(ds='2008-04-08', hr='11') EXCLUSIVE;
 SHOW LOCKS;
+SHOW LOCKS tstsrcpart;
+SHOW LOCKS tstsrcpart PARTITION(ds='2008-04-08', hr='11');
+
 UNLOCK TABLE tstsrc;
 SHOW LOCKS;
+SHOW LOCKS tstsrcpart;
+SHOW LOCKS tstsrcpart PARTITION(ds='2008-04-08', hr='11');
+
 UNLOCK TABLE tstsrcpart;
 SHOW LOCKS;
+SHOW LOCKS tstsrcpart;
+SHOW LOCKS tstsrcpart PARTITION(ds='2008-04-08', hr='11');
+
 UNLOCK TABLE tstsrcpart PARTITION(ds='2008-04-08', hr='11');
 SHOW LOCKS;
+SHOW LOCKS tstsrcpart;
+SHOW LOCKS tstsrcpart PARTITION(ds='2008-04-08', hr='11');
 
 
 drop table tstsrc;
